<resources>
    <string name="app_name">App UI Clone</string>

    <string name="transport_language1">한국어</string>
    <string name="transport_language2">영어</string>
    <string name="text">번역할 내용을 입력하세요</string>
    <string name="transport_button1_text">음성</string>
    <string name="transport_button2_text">대화</string>
    <string name="transport_button3_text">이미지</string>
    <string name="transport_button4_text">학습카메라</string>

    <string name="transport_result_text">번역 결과</string>
    <string name="transport_result_text_value">(번역 결과)</string>
    <string name="transport_result_text2">영어 번역 결과</string>
    <string name="transport_result_text2_value">(대충 영어로 번역한 결과)</string>
    <string name="delete_button">최신 번역\n기록 삭제</string>
    <string name="clear_button">전체 번역\n기록 삭제</string>
    <string name="transport_result_title">번역 기록</string>
    <string name="finish_button">뒤로 가기</string>

    <string name="choice">좋아요 개수 확인</string>

    <string name="tab_1">번역 기록</string>
    <string name="tab_2">즐겨 찾기</string>
</resources>