<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_transport_result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_result_text"
        style="@style/transport_result_title"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_transport_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_result_text_value"
        style="@style/transport_result_text"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_transport_result_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_result_text2"
        style="@style/transport_result_title"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_transport_result_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_result_text2_value"
        style="@style/transport_result_text"
        android:layout_weight="1"/>

</LinearLayout>