<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/papago_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_papago_title_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sidebar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_papago_title"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transport"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_transport1"
            style="@style/transport_language_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/transport_language1"
            app:layout_constraintEnd_toStartOf="@+id/iv_choice1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_choice1"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/choice"
            app:layout_constraintBottom_toBottomOf="@+id/tv_transport1"
            app:layout_constraintEnd_toStartOf="@id/iv_transport_change_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_transport1"
            app:layout_constraintTop_toTopOf="@+id/tv_transport1" />

        <ImageView
            android:id="@+id/iv_transport_change_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/transport"
            app:layout_constraintBottom_toBottomOf="@+id/iv_choice1"
            app:layout_constraintEnd_toStartOf="@id/tv_transport2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_choice1"
            app:layout_constraintTop_toTopOf="@+id/iv_choice1" />

        <TextView
            android:id="@+id/tv_transport2"
            style="@style/transport_language_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/transport_language2"
            app:layout_constraintBottom_toBottomOf="@+id/iv_transport_change_button"
            app:layout_constraintEnd_toStartOf="@id/iv_choice2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_transport_change_button"
            app:layout_constraintTop_toTopOf="@id/iv_transport_change_button"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_choice2"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/choice"
            app:layout_constraintBottom_toBottomOf="@+id/tv_transport2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_transport2"
            app:layout_constraintTop_toTopOf="@+id/tv_transport2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_language"
            style="@style/transport_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/text"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_button1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon1" />

                <TextView
                    android:id="@+id/tv_button1"
                    style="@style/transport_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transport_button1_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/cyan"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_button2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon2" />

                <TextView
                    android:id="@+id/tv_button2"
                    style="@style/transport_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transport_button2_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/level1_blue"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_button3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon3" />

                <TextView
                    android:id="@+id/tv_button3"
                    style="@style/transport_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transport_button3_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/level2_blue"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_button4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon4" />

                <TextView
                    android:id="@+id/tv_button4"
                    style="@style/transport_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transport_button4_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

